# homework

./: .classpath  .gitignore  .project  10.1_ПРМасиви.py  10.2_ЗадачіСписки.py  11_ЧислаСусіди.py  12_TheFinale.py  2_Діалог.py  3_Зошит.py  4.1_ПркутСажанці.py  4.2_КолоСажанці.py  5.1_КатегоріїНаселення.py  5.2_ДодатковіЗавдання.py  6_Math.py  7_КР.py  8_Розгалуження.py  9_AdvCalc.py  MavenInstructions.md  README.md  clean.sh  commons.py  ghToken.txt  pom.xml  update.sh
.github/workflows/: pages.yml
Android/PMP_Lab1/: settings.gradle.kts
Android/PMP_Lab2/: settings.gradle.kts
CPP_template/src/: helloWorld.cpp
CSharp/Coursework/: Coursework.sln
CSharp/Coursework_AtPPZ/: Coursework_AtPPZ.sln
CSharp/Lab1_1/: Lab1_1.sln
CSharp/Lab1_3/: Lab1_3.sln
CSharp/Lab1_4/: Lab1_4.sln
CSharp/Lab2_1-2_2/: Lab2_1-2_2.sln
CSharp/Lab2_3-2_4/: Lab2_3-2_4.sln
CSharp/Lab2_5-2_7/: Lab2_5-2_7.sln
CSharp/Lab2_7-2_8/: Lab2_7-2_8.sln
Cpp/Lab2_1-2_2/: CMakeLists.txt  Commons.h
Cpp/Lab2_1-2_2/Lab2_1/: LetterString.cpp  LetterString.h  String.cpp  String.h  main.cpp
Cpp/Lab2_1-2_2/Lab2_2/: Circle.cpp  Circle.h  Ellipse.cpp  Ellipse.h  Point.h  main.cpp
JFXTest/: .classpath  .project
MATLAB/: Stetsiuk321Lab1.m  Stetsiuk321Lab2Task1.m  Stetsiuk321Lab2Task2.m  Stetsiuk321Lab2Task3.m  Stetsiuk321Lab3Task1.m  Stetsiuk321Lab3Task3.m  Stetsiuk321Lab3Task4.m  Stetsiuk321Lab4.m  Stetsiuk321Lab5.m  Stetsiuk321Lab6.m  Stetsiuk321MKR1.m  polynom4Interpol.m
docs/: Gemfile  _config.yml  chem.md  index.html  index.md  math.md  schedule.html  schedule.md  ukr.md
src/: Main.java
(+643 files in other folders)
